# ics46-pj0

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  debug.sh  extensions.json  settings.json  tasks.json  test.sh
lib/catch2/: CMakeLists.txt
src/: LinkedListStack.hpp  postfixCalc.cpp  postfixCalc.hpp  verifySol.cpp  verifySol.hpp
tst/: stacktests.cpp  verifiertests.cpp
